# torvox

./: .gitignore  .markdownlint.jsonc  .vale.ini  2.txt  AGENTS.md  ANALYSIS.md  Cargo.toml  README.md  TEST_RESULTS.md  Task|SKIP|^ | tail -30  _typos.toml  codecov.yml  coverage-ratchet.toml  deny.toml  e2e-final-verify.py  flake.nix  free-zen.py  geiger-output.txt  go.mod  install.sh  maestro_report.xml  main.go  opencode-free-setup.mjs  pharaoh.toml  plan-a.md  progress.md  report.xml  run_e2e_test.py  rust-toolchain.toml  rustfmt.toml  test_free_zen.py  ubproject.toml  verify_50.py  verify_selection.py  verify_selection_final.py  verify_selection_screenshots.py
android-gui/: Cargo.toml
android-gui/src/: jni_bridge.rs  lib.rs  lock_util.rs  logging.rs  mock_surface.rs
android-gui/tests/: bridge_integration.rs  bridge_safety.rs  ffi_contract_tests.rs  fuzz_wire.rs  gpu_benchmark.rs  gpu_vulkan_tests.rs
benchmarks/: Cargo.toml
benchmarks/benches/: terminal_bench.rs
benchmarks/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_attrs.rs  fuzz_grid_ops.rs  fuzz_grid_resize.rs  fuzz_osc_handler.rs  fuzz_osc_parse.rs  fuzz_selection.rs  fuzz_shader_wgsl.rs  fuzz_vt_parser.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: terminal_render_test.rs  tool_lint.rs
libghostty-rs-patch/: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
libghostty-rs-patch/.github/: FUNDING.yml
mcp-server/: Cargo.toml
mcp-server/src/: lib.rs  live.rs  main.rs  mock.rs  serve.rs  server.rs  types.rs
mcp-server/tests/: emulator_e2e.rs  live_e2e.rs  mcp_integration.rs
terminal-core/: Cargo.toml
terminal-core/examples/: memory_check.rs
terminal-core/kani/: Cargo.toml  lib.rs
terminal-core/src/: cell.rs  config.rs  csi.rs  cursor.rs  event.rs  grid.rs  lib.rs  line.rs  sgr.rs  terminal.rs  unicode.rs  verus_annotations.rs  vt_types.rs
terminal-core/tests/: config_drift.rs  config_integration.rs  grapheme.rs  grid_ops.rs  grid_snapshot_integration.rs  property_tests.rs  selection_integration.rs  selection_text.rs  session_restore.rs  terminal_colors.rs  unicode_icu_conformance.rs
terminal-engine/: Cargo.toml
terminal-engine/src/: action_parser.rs  cursor_cmds.rs  lib.rs  output_processor.rs  pty.rs  session.rs  test_helpers.rs
terminal-engine/tests/: action_parser_tests.rs  alt_screen.rs  bracketed_paste.rs  bridge_roundtrip.rs  concurrent_session.rs  conformance_backends.rs  core_integration.rs  cross_backend.rs  cursor_cmds_tests.rs  dec_modes_dedicated.rs  dpi_scaling.rs  dst_simulation.rs  ecma48_correctness.rs  esctest_full.rs  esctest_suite.rs  font_test.rs  fuzz_replay.rs  fuzz_vt_structured.rs  grid_ops.rs  grid_state_machine.rs  kitty_termtests.rs  layout.rs  libvterm_crossref.rs  libvterm_ffi.rs  lifecycle_test.rs  memory_bounds.rs  mouse_protocol.rs  osc52.rs  ported_alacritty_ref.rs  proptest_csi.proptest-regressions  proptest_csi.rs  pyte_integration.rs  ref_runner.rs  ref_snapshot.rs  selection_categories.rs  selection_roundtrip.rs  session_roundtrip.rs  session_state_machine.rs  sgr_full_compat.rs  sgr_parser_tests.rs  (+15 more)
torvox-bench/: Cargo.toml
torvox-bench/benches/: terminal_bench.rs
torvox-bench/src/: lib.rs
torvox-core/: Cargo.toml
torvox-core/examples/: memory_check.rs
torvox-core/kani/: Cargo.toml  lib.rs
torvox-core/src/: ansi.rs  cell.rs  config.rs  control.rs  csi.rs  cursor.rs  event.rs  grid.rs  lib.rs  line.rs  selection.rs  sgr.rs  snapshot.rs  terminal.rs  unicode.rs  verus_annotations.rs  vt_types.rs
torvox-core/tests/: config_drift.rs  config_integration.rs  grapheme.rs  grid_ops.rs  grid_snapshot_integration.rs  property_tests.rs  selection_integration.rs  selection_text.rs  session_restore.rs  terminal_colors.rs  unicode_icu_conformance.rs
torvox-fuzz/: Cargo.toml
torvox-fuzz/fuzz/: .gitignore  Cargo.toml
torvox-fuzz/src/: lib.rs
torvox-gui-android/: Cargo.toml  uniffi.toml
torvox-gui-android/src/: bridge.rs  commands.rs  jni_bridge.rs  lib.rs  logging.rs  mock_surface.rs  surface.rs
torvox-gui-android/tests/: bridge_integration.rs  bridge_safety.rs  ffi_contract_tests.rs  fuzz_wire.rs  gpu_benchmark.rs  gpu_noop_tests.rs  gpu_vulkan_tests.rs
torvox-integration-tests/: Cargo.toml
torvox-integration-tests/src/: lib.rs
torvox-integration-tests/tests/: terminal_render_test.rs  tool_lint.rs
torvox-mcp/: Cargo.toml
torvox-mcp/src/: input_queue.rs  lib.rs  live.rs  main.rs  serve.rs  server.rs  types.rs
torvox-mcp/tests/: emulator_e2e.rs  live_e2e.rs  mcp_integration.rs
torvox-renderer/: Cargo.toml
torvox-renderer/examples/: basic_render.rs
torvox-renderer/shaders/: background.wgsl  cell.wgsl  cursor.wgsl
torvox-renderer/src/: atlas.rs  font.rs  gpu.rs  lib.rs  lock_util.rs  pipeline.rs  renderdoc_capture.rs  screenshot_tests.rs
torvox-renderer/test_data/: freetype_A.rgba  freetype_hao.rgba
torvox-renderer/tests/: font_metrics.rs  gpu_headless_test.rs  text_ocr_test.rs
torvox-terminal/: Cargo.toml
torvox-terminal/src/: action_parser.rs  cursor_cmds.rs  ghostty_terminal.rs  keyboard.rs  lib.rs  lock_util.rs  mock_pty.rs  osc_handler.rs  parser.rs  pty.rs  session.rs  sgr_parser.rs  shell_env.rs  snapshot_test.rs  state.rs  terminal.rs  test_helpers.rs  vt_conformance.rs
torvox-terminal/tests/: action_parser_tests.rs  alt_screen.rs  bash_comprehensive.rs  bash_integration.rs  bracketed_paste.rs  bridge_roundtrip.rs  concurrent_session.rs  conformance_backends.rs  core_integration.rs  cross_backend.rs  cursor_cmds_tests.rs  dec_modes_dedicated.rs  dpi_scaling.rs  dst_simulation.rs  ecma48_correctness.rs  esctest_full.rs  esctest_suite.rs  font_test.rs  fuzz_replay.rs  fuzz_vt_structured.rs  grid_ops.rs  grid_state_machine.rs  keyboard_combos.rs  keyboard_full.rs  kitty_termtests.rs  layout.rs  libvterm_crossref.rs  libvterm_ffi.rs  lifecycle_test.rs  memory_bounds.rs  mouse_protocol.rs  osc52.rs  ported_alacritty_ref.rs  proptest_csi.proptest-regressions  proptest_csi.rs  pyte_integration.rs  ref_runner.rs  ref_snapshot.rs  (+21 more)
(+1058 files in other folders)
