[workspace]
resolver = "2"
members = [
  "torvox-core",
  "torvox-core/kani",
  "torvox-terminal",
  "torvox-renderer",
  "torvox-gui-android",
  "torvox-exec",
  "torvox-mcp",
  "torvox-fuzz/fuzz",
  "torvox-integration-tests",
  "torvox-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"

[workspace.dependencies]
torvox-core = { path = "torvox-core" }
torvox-terminal = { path = "torvox-terminal" }
torvox-renderer = { path = "torvox-renderer", default-features = false }
torvox-gui-android = { path = "torvox-gui-android" }

libc = "0.2"
nix = { version = "0.31.3", features = ["term", "process", "signal", "fs"] }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = { version = "2", default-features = false }
wgpu = "29.0.3"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.19"
fontdb = "0.23"
swash = "0.2.7"
guillotiere = "0.7"

boltffi = "0.25.2"

flume = "0.12"
bitflags = "2"
lru = "0.16"
quickcheck = "1"
quickcheck_macros = "1"
futures = "0.3"
raw-window-handle = "0.6"
log = "0.4"
rkyv = { version = "0.8", default-features = false }
toml = "0.8"

# libghostty-vt patched for Android targets.
# Patch file: patches/libghostty-vt-android.patch
# Apply before cargo build:
#   git clone --depth 1 https://github.com/Uzaaft/libghostty-rs.git libghostty-rs
#   cd libghostty-rs && git apply ../patches/libghostty-vt-android.patch
[patch.crates-io]
libghostty-vt = { path = "libghostty-rs/crates/libghostty-vt" }
libghostty-vt-sys = { path = "libghostty-rs/crates/libghostty-vt-sys" }
