[workspace]
resolver = "2"
members = [
  "torvox-core",
  "torvox-core/kani",
  "torvox-terminal",
  "torvox-renderer",
  "torvox-gui-android",
  "torvox-exec",
  "torvox-mcp",
  "fuzz",
  "torvox-integration-tests",
  "torvox-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
private = true


[workspace.dependencies]
torvox-core = { path = "torvox-core" }
torvox-terminal = { path = "torvox-terminal" }
torvox-renderer = { path = "torvox-renderer", default-features = false }
torvox-gui-android = { path = "torvox-gui-android" }

libc = "0.2"
nix = { version = "0.31", features = ["term", "process", "signal", "fs"] }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = { version = "2", default-features = false }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.19"
fontdb = "0.23"
swash = "0.2"
guillotiere = "0.7"

boltffi = "0.25"

flume = "0.12"

# Testing infrastructure: proptest for property-based testing, arbitrary for structured fuzz generation
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
bitflags = "2"
lru = "0.18"
quickcheck = "1"
quickcheck_macros = "1"
futures = "0.3"
raw-window-handle = "0.6"
log = "0.4"
rkyv = { version = "0.8", default-features = false }
toml = "0.8"

# Upstream libghostty-rs via git (no crates.io release). Pinned via Cargo.lock.
# Zig correctness patches applied to ghostty source via flake.nix shellHook (GHOSTTY_SOURCE_DIR).
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", package = "libghostty-vt" }
libghostty-vt-sys = { git = "https://github.com/Uzaaft/libghostty-rs.git", package = "libghostty-vt-sys" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
wildcard_imports = "allow"
module_inception = "allow"
missing_const_type_fn = "allow"
