[package]
name = "fuzz-targets"
version = "0.1.0"
edition = "2024"

publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_vt_parser"
path = "fuzz_targets/fuzz_vt_parser.rs"
test = false
bench = false

[[bin]]
name = "fuzz_osc_parse"
path = "fuzz_targets/fuzz_osc_parse.rs"
test = false
bench = false

[[bin]]
name = "fuzz_grid_resize"
path = "fuzz_targets/fuzz_grid_resize.rs"
test = false
bench = false

[[bin]]
name = "fuzz_grid_ops"
path = "fuzz_targets/fuzz_grid_ops.rs"
test = false
bench = false

[[bin]]
name = "fuzz_selection"
path = "fuzz_targets/fuzz_selection.rs"
test = false
bench = false

[[bin]]
name = "fuzz_attrs"
path = "fuzz_targets/fuzz_attrs.rs"
test = false
bench = false

[[bin]]
name = "fuzz_shader_wgsl"
path = "fuzz_targets/fuzz_shader_wgsl.rs"
test = false
bench = false

[dependencies]
terminal-core = { path = "../terminal-core" }
terminal-engine = { path = "../terminal-engine" }
libfuzzer-sys = "0.4"
naga = { version = "23", default-features = false, features = ["wgsl-in", "spv-out"] }
serde_json = "1"

[lints]
workspace = true
