[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = " terminal sessions"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
terminal-core = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
flume = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
terminal-engine = { workspace = true, optional = true }

[features]
default = []
live = ["dep:terminal-engine"]
mock = []
emulator = ["mock"]

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
terminal-engine = { workspace = true }

[lints]
workspace = true
