[package]
name = "terminal-core"
version.workspace = true
edition.workspace = true
description = "Core types terminal emulator (no_std compatible)"

[dependencies]
serde = { workspace = true }
unicode-width = { version = "0.2", default-features = false, features = [
  "no_std",
  "cjk",
] }
rkyv = { workspace = true, default-features = false, features = [
  "alloc",
], optional = true }

[features]
default = ["std", "alloc"]
std = ["serde/std"]
alloc = ["serde/alloc"]
rkyv = ["dep:rkyv"]

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
proptest = { workspace = true }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[package.metadata.verus]
verify = true
no_vstd = true
