[package]
name = "torvox-bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks for Torvox terminal operations"
license.workspace = true

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "terminal_bench"
harness = false
