[package]
name = "torvox-bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks for Torvox terminal operations"

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
torvox-renderer = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
guillotiere = "0.7"

[[bench]]
name = "terminal_bench"
harness = false

[lints]
workspace = true
