[package]
name = "torvox-core"
version.workspace = true
edition.workspace = true
description = "Core types for Torvox terminal emulator (no_std compatible)"
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["std", "alloc"]
std = ["thiserror", "serde/std"]
alloc = ["serde/alloc"]
