[package]
name = "torvox-core"
version.workspace = true
edition.workspace = true
description = "Core types for Torvox terminal emulator (no_std compatible)"
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true, optional = true }
unicode-width = { version = "0.2", default-features = false, features = [
  "no_std",
  "cjk",
] }

[features]
default = ["std", "alloc"]
std = ["thiserror", "serde/std"]
alloc = ["serde/alloc"]

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
