[package]
name = "torvox-gui-android"
version.workspace = true
edition.workspace = true
description = "Android BoltFFI bridge for Torvox terminal UI"
license.workspace = true

[lib]
name = "torvox_android"
crate-type = ["cdylib", "lib"]

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
torvox-renderer = { workspace = true, default-features = false }
boltffi = { workspace = true }
thiserror = { workspace = true }
