[package]
name = "torvox-gui-android"
version.workspace = true
edition.workspace = true
description = "Android BoltFFI bridge for Torvox terminal UI"

[lib]
name = "torvox_android"
crate-type = ["cdylib", "lib"]

[dependencies]
flume = { workspace = true }
torvox-core = { workspace = true, features = ["rkyv"] }
rkyv = { workspace = true, features = ["std", "bytecheck"] }
torvox-terminal = { workspace = true }
torvox-renderer = { workspace = true, default-features = false }
boltffi = { workspace = true }
thiserror = { workspace = true }

log = { workspace = true }
android_logger = "0.15"

[dev-dependencies]
wgpu = { workspace = true, features = ["noop", "vulkan"] }

[lints]
workspace = true
