[package]
name = "torvox-integration-tests"
version.workspace = true
edition.workspace = true
description = "Integration tests for Torvox terminal emulator"
license.workspace = true

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
