[package]
name = "torvox-integration-tests"
version.workspace = true
edition.workspace = true
description = "Integration tests for Torvox terminal emulator"

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
torvox-renderer = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
wgpu = { workspace = true }
futures = { workspace = true }
regex-lite = "0.1"

[lints]
workspace = true
