[package]
name = "torvox-renderer"
version.workspace = true
edition.workspace = true
description = "GPU-native terminal renderer for Torvox (wgpu 29 + cosmic-text + swash)"
license.workspace = true

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
libghostty-vt = "0.1.1"
wgpu = { workspace = true }
bytemuck = { workspace = true }
cosmic-text = { workspace = true }
fontdb = { workspace = true }
swash = { workspace = true }
guillotiere = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
futures = { workspace = true }
raw-window-handle = { workspace = true }
winit = { version = "0.30", optional = true }

[features]
default = ["winit"]

[[example]]
name = "basic_render"
required-features = ["winit"]
