[package]
name = "torvox-renderer"
version.workspace = true
edition.workspace = true
description = "GPU-native terminal renderer for Torvox (wgpu 29 + cosmic-text + swash)"

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
wgpu = { workspace = true, features = ["spirv", "gles", "vulkan"] }
bytemuck = { workspace = true }
cosmic-text = { workspace = true }
fontdb = { workspace = true }
swash = { workspace = true }
guillotiere = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
futures = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }

[dev-dependencies]
image = { workspace = true }

[lints]
workspace = true
