[package]
name = "torvox-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal state machine, VT parser, and PTY management for Torvox"
license.workspace = true

[dependencies]
torvox-core = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
bitflags = { workspace = true }
libghostty-vt = "0.1.1"

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
