[package]
name = "torvox-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal state machine, VT parser, and PTY management for Torvox"

[dependencies]
torvox-core = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
libghostty-vt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
base64 = "0.22"
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
proptest = { workspace = true }
arbitrary = { workspace = true }
shuttle = "0.7"

[lints]
workspace = true
