[package]
name = "torvox-kani"
version.workspace = true
edition.workspace = true
description = "Kani formal verification proofs for torvox-core"


# This is a meta-crate for Kani proofs.
# Run with: cargo kani --manifest-path torvox-core/kani/Cargo.toml

[lib]
path = "lib.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[dependencies]
torvox-core = { workspace = true }
