[package]
name = "ghostling_rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libghostty-vt = { workspace = true, features = ["log"] }
log = "0.4.29"
env_logger = "0.11.10"
macroquad = "0.4.14"
nix = { version = "0.31.2", features = ["term", "fs", "signal", "process", "user", "ioctl"] }
